title and end cards

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <title>bean?</title>
+    <title>DPC</title>
     <link rel="icon" href="Assets/Images/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="style.css">
   </head>
@@ -49,6 +49,7 @@
   <script src="Source/Scenes/ImageScene.js"></script>
   <script src="Source/Scenes/StandardScene.js"></script>
   <script src="Source/Scenes/RestartScene.js"></script>
+  <script src="Source/Scenes/TimeProgressScene.js"></script>
   <script src="Source/Driver/Initialize.js"></script>
 
 </html>
