remove reference to deleted files

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <video preload="auto"  id="player3" class="ScreenContent">
       <source src="" type="video/mp4" id="source3">
     </video>
-    <img src="Assets/Images/Start.png" id="image0" class="ScreenContent">
+    <img src="" id="image0" class="ScreenContent">
       
     <div class="startContainer">
       <button id="buttonCenter">center</button>
